# Run-Google-Tests-for-Your-Cpp-Projects

./: CMakeLists.txt  README.md
lib/: product.h
src/: main.cpp  product.cpp
tests/: utest-product.cpp
